// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test MovieCardButton Should render correctly with icon 1`] = `
<div>
  <button
    class="btn movie-card__button"
    type="button"
  >
    <svg
      height="20"
      viewBox="0 0 19 20"
      width="19"
    >
      <use
        xlink:href="#play-s"
      />
    </svg>
  </button>
</div>
`;

exports[`Test MovieCardButton Should render correctly with text 1`] = `
<div>
  <button
    class="btn movie-card__button"
    type="button"
  >
    <span>
      Test
    </span>
  </button>
</div>
`;

exports[`Test MovieCardButton Should render correctly with text and icon 1`] = `
<div>
  <button
    class="btn movie-card__button"
    type="button"
  >
    <svg
      height="20"
      viewBox="0 0 19 20"
      width="19"
    >
      <use
        xlink:href="#play-s"
      />
    </svg>
    <span>
      Test
    </span>
  </button>
</div>
`;
